--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 * {
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  font-weight: 100;
+  font-style: normal;
   margin: 0;
   padding: 0;
 }
@@ -78,7 +82,7 @@
 .panel-control-card div:first-child {
   height: 70%;
   width: 100%;
-  background-color: darkslateblue ;
+  background-color: darkslateblue;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
   display: flex;
@@ -97,4 +101,3 @@
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
 }
-
